[김기남] 자격 시험 공고 리스트

--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -20,6 +20,14 @@
 		<li>#<a href="">연간 자격 시험 일정 삭제</a></li>
 		
 	</ul>
+	<h3>협회 : 자격 시험 공고 관리</h3>
+	<ul>
+		<li><a href="">자격 시험 공고 등록</a></li>
+		<li><a href="/association/notice/noticeLicenseTestLocationList">자격 시험 공고 조회</a></li>
+		<li>#<a href="">자격 시험 공고 삭제</a></li>
+		<li>#<a href="">자격 시험 공고 삭제</a></li>
+		
+	</ul>
 	
 	<h3>협회 : 자격시험 장소 관리</h3>
 	<ul>
