--- a/lms/src/main/resources/templates/association/license/addLicenseTestLocationDetail.html
+++ b/lms/src/main/resources/templates/association/license/addLicenseTestLocationDetail.html
@@ -12,34 +12,11 @@
 <script>
 	$(document).ready(function() {
 		//유효성 검사를 위한 변수 선언
-		let licenseTestLocationDetailCodeCheck = true;
-		let licenseTestLocationCodeCheck = true;
 		let licenseTestLocationDetailClassroomCheck = true;
 		let licenseTestLocationDetailUseCheck = true;
 		let licenseTestLocationDetailMaximumNumberCheck = true;
 		let licenseTestLocationDetailUseInsertDateCheck = true;
 		
-		//licenseTestLocationDetailCode 입력 유효성 검사
-		$('#licenseTestLocationDetailCode').blur(function() {
-			if($('#licenseTestLocationDetailCode').val() == "") {
-				console.log('licenseTestLocationDetailCode 공백입력')
-				licenseTestLocationDetailCodeCheck = true;
-			} else {
-                console.log('licenseTestLocationDetailCode 유효성 검사 완료')
-				licenseTestLocationDetailCodeCheck = false;
-			}
-		});
-
-		//licenseTestLocationCode 입력 유효성 검사
-		$('#licenseTestLocationCode').blur(function() {
-			if($('#licenseTestLocationCode').val() == "") {
-				console.log('licenseTestLocationCode 공백입력')
-				licenseTestLocationCodeCheck = true;
-			} else {
-                console.log('licenseTestLocationCode 유효성 검사 완료')
-				licenseTestLocationCodeCheck = false;
-			}
-		});
 
 		//licenseTestLocationDetailClassroom 입력 유효성 검사
 		$('#licenseTestLocationDetailClassroom').blur(function() {
@@ -87,13 +64,7 @@
 
 		//btnAdd 클릭 이벤트 처리
 		$('#btnAdd').on('click',function() {
-			if(licenseTestLocationDetailCodeCheck) {
-				$('h4').addClass('red');
-				$('h4').text('시험장소세부코드가 공백 상태 입니다.');
-			} else if(licenseTestLocationCodeCheck) {
-				$('h4').addClass('red');
-				$('h4').text('시험장소코드가 공백 상태 입니다.');
-			} else if(licenseTestLocationDetailClassroomCheck) {
+			if(licenseTestLocationDetailClassroomCheck) {
 				$('h4').addClass('red');
 				$('h4').text('강의실/교실이 공백 상태 입니다.');
 			} else if(licenseTestLocationDetailUseCheck) {
@@ -115,12 +86,8 @@
 	<h3>자격증 시험 장소  세부 추가</h3>
 	<form id="addLicenseTestLocationDetail" action="/association/license/addLicenseTestLocaitonDetail" method="post">
 		<div class="form-group">
-			<label>시험장소세부코드 :</label>
-			<input type="text" class="form-control" id="licenseTestLocationDetailCode" name="licenseTestLocationDetailCode" hidden>
-		</div>
-		<div class="form-group">
 			<label>시험장소코드 :</label>
-			<input type="text" class="form-control" id="licenseTestLocationCode" name="licenseTestLocationCode">
+			<input type="text" class="form-control" id="licenseTestLocationCode" name="licenseTestLocationCode" th:value="${licenseTestLocationCode}">
 		</div>
 		<div class="form-group">
 			<label>강의실/교실 :</label>
