--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -22,7 +22,7 @@
 	</ul>
 	<h3>협회 : 자격 시험 공고 관리</h3>
 	<ul>
-		<li><a href="">자격 시험 공고 등록</a></li>
+		<li><a href="/association/notice/addNoticeLicenseTestLocation">자격 시험 공고 등록</a></li>
 		<li><a href="/association/notice/noticeLicenseTestLocationList">자격 시험 공고 조회</a></li>
 		<li>#<a href="">자격 시험 공고 삭제</a></li>
 		<li>#<a href="">자격 시험 공고 삭제</a></li>
