--- a/lms/src/main/resources/templates/institution/institutionLogin.html
+++ b/lms/src/main/resources/templates/institution/institutionLogin.html
@@ -38,7 +38,7 @@
 				<div class="col-sm-6"></div>
 			</div>
 			<button type="submit" class="btn btn-info">로그인</button>
-			<a href="/insertAssociationAdmin" class="btn btn-outline-info">교육원직원등록</a>
+			<a href="/insertInstAdmin" class="btn btn-outline-info">교육원직원등록</a>
 	</form>
 	<br>
 	<br>
