--- a/lms/src/main/resources/templates/teacher/member/insertTeacher.html
+++ b/lms/src/main/resources/templates/teacher/member/insertTeacher.html
@@ -1,11 +1,207 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>강사 등록</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/sandstone/bootstrap.min.css">
+<!--	필요한 api	-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script>
+$(document).ready(function(){
+	$('#institutionCode').change(function(){
+		console.log("교육원 코드 :"+$('#institutionCode').val());
+	});
+	//	id중복체크
+	//	유효성 검사를 위한 정규식
+    	let idCheck = /[A-Za-z\d]{5,10}$/; //	최소5자, 최대 10자의 문자
+    	let pwCheck = /(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,16}$/; //	최소 8 자, 최소 하나의 문자 및 하나의 숫자
+    	let numberCheck = /^[0-9]+$/;	//	숫자만 입력해야하는 경우
+    	let nameCheck = /[a-zA-Z가-힣]/; 	//	한글, 영어만
+    	
+    	$("#memberOnlineId").blur(function() {	//id input창을 벗어났을때,아래 이벤트를 실행한다.
+//    		중복체크 버튼이 있을때, 버튼을 클릭했을 때 -> .click(function()) 으로 쓸 수 있다.
+    		let memberOnlineId = $("#memberOnlineId").val(); //id 를 param.
+    		if(!idCheck.test($('#memberOnlineId').val())){
+    			$('#idCk').attr('style','color:#B70000');
+    			$('#idCk').text('5~20자의 영문 소문자, 숫자와 특수기호(_),(-)만 사용 가능합니다.');
+    		} else {
+    		$.ajax({
+                type : 'POST'
+                ,data : {'memberOnlineId':memberOnlineId}
+                ,url : '/idCheck'
+                ,success : function(data) {
+                	console.log(data)
+                    if (data) {
+                    	$('#idCk').attr('style','color:#2F9D27');
+                        $('#idCk').text('√ 멋진 아이디네요!');
+                    } else {
+                    	$('#idCk').attr('style','color:#B70000');
+                    	$('#idCk').text('이미 사용중이거나 탈퇴한 아이디입니다');
+                    	return false;
+                    }
+                },
+            });
+    		}
+    	});
+    	$("#memberOnlinePw").blur(function() {
+    		if ($('#memberOnlinePw').val() != ''){
+    			if(!pwCheck.test($('#memberOnlinePw').val())){
+    				$('#pwCk').attr('style','color:#B70000');
+            		$('#pwCk').text('8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.');
+            		return false;
+    			} else {
+    				$('#pwCk').remove();
+    			}
+    		}
+    	})
+    	$("#memberName").blur(function() {
+    		if ($('#memberName').val() != ''){
+    			if(!nameCheck.test($('#memberName').val())){
+    				$('#nameCk').attr('style','color:#B70000');
+            		$('#nameCk').text('한글, 영어만 입력 가능합니다.');
+            		return false;
+    			} else {
+    				$('#nameCk').remove();
+    			}
+    		}
+    	})
+    	$("#memberRegistrationNumberFront").blur(function() {
+    		if ($('#memberRegistrationNumberFront').val() != ''){
+    			if(!numberCheck.test($('#memberRegistrationNumberFront').val())){
+    				$('#registNoFrontCheck').attr('style','color:#B70000');
+            		$('#registNoFrontCheck').text('숫자만 입력 가능합니다.');
+            		return false;
+    			} else {
+    				$('#registNoFrontCheck').remove();
+    			}
+    		}
+    	})
+    	$("#memberRegistrationNumberBack").blur(function() {
+    		if ($('#memberRegistrationNumberBack').val() != ''){
+    			if(!numberCheck.test($('#memberRegistrationNumberBack').val())){
+    				$('#registNoBackCheck').attr('style','color:#B70000');
+            		$('#registNoBackCheck').text('숫자만 입력 가능합니다.');
+            		return false;
+    			} else {
+    				$('#registNoBackCheck').remove();
+    			}
+    		}
+    	})
+    	$("#memberPhoneNumber").blur(function() {
+    		if ($('#memberPhoneNumber').val() != ''){
+    			if(!numberCheck.test($('#memberPhoneNumber').val())){
+    				$('#phoneCheck').attr('style','color:#B70000');
+            		$('#phoneCheck').text('숫자만 입력 가능합니다.');
+            		return false;
+    			} else {
+    				$('#phoneCheck').remove();
+    			}
+    		}
+    	})
+    	$("#memberAddress").blur(function() {
+    		if ($('#memberAddress').val() != ''){
+    			$('#addrCheck').remove();
+    		}
+    	})
+    	$("#memberAddressDesc").blur(function() {
+    		if ($('#memberAddressDesc').val() != ''){
+    			$('#addrDescCheck').remove();
+    		}
+    	})
+    	$("#institutionCode").blur(function() {
+    		if ($('#institutionCode').val() != ''){
+    			$('#instCode').remove();
+    		}
+    	})
+    	//	폼유효성 검사
+    	$('#btnInsert').on('click',function(){
+    		console.log('#btnInsert click test');
+    		if ($('#memberOnlineId').val() == ''){
+    			$('#idCheck').attr('style','color:#B70000')
+    			$('#idCheck').text('*아이디를 입력하세요');
+    	    	$('#memberOnlineId').focus();
+        	return false;
+        	} else if ($('#memberOnlinePw').val() == ''){
+    			$('#pwCheck').attr('style','color:#B70000')
+    			$('#pwCheck').text('*비밀번호를 입력하세요');
+    	    	$('#memberOnlinePw').focus();
+        	return false;
+        	} else if ($('#memberName').val() == ''){
+    			$('#nameCheck').attr('style','color:#B70000')
+    			$('#nameCheck').text('*이름을 입력하세요');
+    	    	$('#memberName').focus();
+        	return false;
+        	} else if ($('#memberRegistrationNumberFront').val() == ''){
+    			$('#registNoFrontCheck').attr('style','color:#B70000')
+    			$('#registNoFrontCheck').text('*주민번호를 입력하세요');
+    	    	$('#memberRegistrationNumberFront').focus();
+        	return false;
+        	} else if ($('#memberRegistrationNumberBack').val() == ''){
+    			$('#registNoBackCheck').attr('style','color:#B70000')
+    			$('#registNoBackCheck').text('*주민번호를 입력하세요');
+    	    	$('#memberRegistrationNumberBack').focus();
+        	return false;
+        	} else if ($('#memberPhoneNumber').val() == ''){
+    			$('#phoneCheck').attr('style','color:#B70000')
+    			$('#phoneCheck').text('*전화번호를 입력하세요');
+    	    	$('#memberPhoneNumber').focus();
+        	return false;
+        	} else if ($('#memberAddress').val() == ''){
+    			$('#addrCheck').attr('style','color:#B70000')
+    			$('#addrCheck').text('*주소를 입력하세요');
+    	    	$('#memberAddress').focus();
+        	return false;
+        	} else if ($('#memberAddressDesc').val() == ''){
+    			$('#addrDescCheck').attr('style','color:#B70000')
+    			$('#addrDescCheck').text('*상세주소를 입력하세요');
+    	    	$('#memberAddressDesc').focus();
+        	return false;
+        	} else if ($('#institutionCode').val() == ''){
+    			$('#instCode').attr('style','color:#B70000')
+    			$('#instCode').text('*교육원을 선택하세요');
+    	    	$('#institutionCode').focus();
+        	return false;
+        	}
+    		let memberOnlineId = $('#memberOnlineId').val();
+        	let memberOnlinePw = $('#memberOnlinePw').val();
+        	let memberName = $('#memberName').val();
+        	let memberRegistrationNumberFront = $('#memberRegistrationNumberFront').val();
+        	let memberRegistrationNumberBack = $('#memberRegistrationNumberBack').val();
+        	let memberPhoneNumber = $('#memberPhoneNumber').val();
+        	let memberPostcode = $('#memberPostcode').val();
+        	let memberAddress = $('#memberAddress').val();
+        	let memberAddressDesc = $('#memberAddressDesc').val();
+        	let memberRank = $('#memberRank').val();
+        	let institutionCode = $('#institutionCode').val();
+        	$.ajax({
+    			url:'/insertTeacher'
+        		,type:'POST'
+        		,data:{'memberOnlineId':memberOnlineId
+        			,'memberOnlinePw':memberOnlinePw
+        			,'memberName':memberName
+        			,'memberRegistrationNumberFront':memberRegistrationNumberFront
+        			,'memberRegistrationNumberBack':memberRegistrationNumberBack
+        			,'memberPhoneNumber':memberPhoneNumber
+        			,'memberPostcode':memberPostcode
+        			,'memberAddress':memberAddress
+        			,'memberAddressDesc':memberAddressDesc
+        			,'memberRank':memberRank
+        			,'institutionCode':institutionCode}
+    	    	,success:function(){
+//        	        $('#btnList').trigger('click');	//trigger 이벤트를 대신 해준다. trigger('load')하면 새로고침된다.
+        	        alert('정상적으로 입력되었습니다');
+        	        location.href='/teacherLogin';
+            	}
+        	});
+    	});
+    	$('#btnBack').on('click',function(){
+    		console.log('#btnBack click test');
+    		location.href='javascript:history.back()';
+    	});
+});
     function sample6_execDaumPostcode() {
         new daum.Postcode({
             oncomplete: function(data) {
@@ -56,7 +252,7 @@
 </script>
 </head>
 <body>
-<!-- 간격조정 -->
+<!-- 	간격조정	 -->
 <div class="row">
 	<div class="col-sm-2"></div>
 	<div class="col-sm-8">
@@ -66,119 +262,107 @@
 			<hr class="my-4">
 			<p>강사로 채용 확정되신 분들만 가입을 할 수 있습니다.</p>
 			<p class="lead">
-			<form action="/insertTeacher" method="post">
-				<fieldset>
-    				<div class="form-group">
-    				<legend>회원정보</legend>
-    				</div>
+			<div class="row">
+				<div class="col-md-1"></div>
+				<div class="col-md-6">
+					<form action="/insertTeacher" method="post">
+						<fieldset>
+    						<div class="form-group">
+    							<legend>회원정보</legend>
+    						</div>
     				<!-- 	아이디	 -->
-    				<div class="form-group">
-    					<div class="col-sm-5">
-							<label for="InputId">아이디</label>
-							<input type="text" class="form-control" id="memberOnlineId" name="memberOnlineId" aria-describedby="" placeholder="ID" value="">
-    		  				<small class="form-text text-muted">영문/숫자 아이디 중복검사 확인 필수</small>
-      					</div>
-					</div>
+		    				<div class="form-group">
+								<label for="InputId">아이디</label>
+								<input type="text" class="form-control" id="memberOnlineId" name="memberOnlineId" aria-describedby="" placeholder="ID" value="">
+    		  					<small class="form-text" id="idCk"></small>
+							</div>
 					<!-- 	비밀번호	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputPw">비밀번호</label>
-							<input type="password" class="form-control" id="memberOnlinePw" name="memberOnlinePw" aria-describedby="" placeholder="PASSWORD" value="">
-		      				<small class="form-text text-muted">영문/숫자 조합으로 8-16자 </small>
-						</div>
-					</div>
+							<div class="form-group">
+								<label for="InputPw">비밀번호</label>
+								<input type="password" class="form-control" id="memberOnlinePw" name="memberOnlinePw" aria-describedby="" placeholder="PASSWORD" value="">
+		      					<small class="form-text" id="pwCk"></small>
+							</div>
 					<!-- 	이름	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputName">이름</label>
-							<input type="text" class="form-control" id="memberName" name="memberName" aria-describedby="" placeholder="NAME" value="">
-						</div>
-					</div>
+							<div class="form-group">
+								<label for="InputName">이름</label>
+								<input type="text" class="form-control" id="memberName" name="memberName" aria-describedby="" placeholder="NAME" value="">
+								<small class="form-text" id="nameCk"></small>
+							</div>
 					<!-- 	주민번호	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputRegistrationNumber">주민번호</label>
-							<div class="row">
-								<div class="col-sm-6">
-									<input type="text" class="form-control" id="memberRegistrationNumberFront" name="memberRegistrationNumberFront" aria-describedby="" placeholder="RegistrationNumberFront" value="" size="4"> 
+							<div class="form-group">
+								<label for="InputRegistrationNumber">주민번호</label>
+								<div class="row">
+									<div class="col-sm-6">
+										<input type="text" class="form-control" id="memberRegistrationNumberFront" name="memberRegistrationNumberFront" aria-describedby="" placeholder="RegistrationNumberFront" value="" size="4"> 
+									</div>
+									<div class="col-sm-6">
+										<input type="password" class="form-control" id="memberRegistrationNumberBack" name="memberRegistrationNumberBack" aria-describedby="" placeholder="RegistrationNumberBack" value="1001000" size="5">
+									</div>
 								</div>
-								<div class="col-sm-6">
-									<input type="password" class="form-control" id="memberRegistrationNumberBack" name="memberRegistrationNumberBack" aria-describedby="" placeholder="RegistrationNumberBack" value="1001000" size="5">
-								</div>
+								<small class="form-text" id="registNoFrontCheck"></small><small class="form-text" id="registNoBackCheck"></small>
 							</div>
-						</div>
-					</div>
 					<!-- 	강사코드	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputTeacherApproval">강사코드</label>
-							<input type="text" class="form-control" id="teacherApprovalCode" name="teacherApprovalCode" aria-describedby="" placeholder="TeacherApproval" value="">
-							<small class="form-text text-muted">발급받은 강사코드를 입력하세요</small>
-						</div>
-					</div>
+							<div class="form-group">
+								<label for="InputTeacherApproval">강사코드</label>
+								<input type="text" class="form-control" id="teacherApprovalCode" name="teacherApprovalCode" aria-describedby="" placeholder="TeacherApproval" value="">
+								<small class="form-text text-muted">발급받은 강사코드를 입력하세요</small>
+								<small class="form-text" id="approvalCheck"></small>
+							</div>
 					<!-- 	경력사항	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="exampleTextarea">경력사항</label>
-      						<textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
-      					</div>
-      				</div>
+							<div class="form-group">
+								<label for="exampleTextarea">경력사항</label>
+      							<textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+		      				</div>
 					<!-- 	전화번호	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputPhone">전화번호</label>
-							<input type="tel" class="form-control" name="memberPhoneNumber" aria-describedby="" value="010-1234-1234">
-							<small class="form-text text-muted">ex) 010-0000-0000 </small>
-						</div>
-					</div>
+							<div class="form-group">
+								<label for="InputPhone">전화번호</label>
+								<input type="tel" class="form-control" name="memberPhoneNumber" aria-describedby="" value="010-1234-1234">
+								<small class="form-text" id="phoneCheck"></small>
+							</div>
 					<!-- 	주소	 -->
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputAddress">주소</label>
-							<div class="row">
-								<div class="col-sm-4">
-									<input type="text" readonly="readonly" class="form-control" maxlength="14" id="memberPostcode" name="memberPostcode" size="4">
+							<div class="form-group">
+								<label for="InputAddress">주소</label>
+								<div class="row">
+									<div class="col-sm-4">
+										<input type="text" readonly="readonly" class="form-control" maxlength="14" id="memberPostcode" name="memberPostcode" size="4">
+									</div>
+									<div class="col-sm-8">
+										<input type="button" class="btn btn-outline-info" onclick="sample6_execDaumPostcode()" value="우편번호찾기"><br>
+									</div>
 								</div>
-								<div class="col-sm-8">
-									<input type="button" class="btn btn-outline-info" onclick="sample6_execDaumPostcode()" value="우편번호찾기"><br>
-								</div>
-							</div>
 								<input id="memberAddress" name="memberAddress" class="form-control" placeholder="도로명주소" readonly="readonly" value="" type="text" size="30"/><br>
-							<div class="row">
-								<div class="col-sm-8">
-									<input id="memberAddressDesc" name="memberAddressDesc" class="form-control" value="2층 한국스마트정보교육원" placeholder="상세주소" type="text"/>
+								<div class="row">
+									<div class="col-sm-8">
+										<input id="memberAddressDesc" name="memberAddressDesc" class="form-control" value="2층 한국스마트정보교육원" placeholder="상세주소" type="text"/>
+									</div>
+									<div class="col-sm-4">
+										<input type="text" id="sample6_extraAddress" size="7" class="form-control" placeholder="참고항목">
+									</div>
 								</div>
-								<div class="col-sm-4">
-									<input type="text" id="sample6_extraAddress" size="7" class="form-control" placeholder="참고항목">
-								</div>
+								<small class="form-text" id="addrCheck"></small><small class="form-text" id="addrDescCheck"></small>
 							</div>
-						</div>
-					</div>
 					<!--	 회원등급	 -->
 					<input type="hidden" name="memberRank" value="강사">
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputInstitution">교육원</label>
-							<select class="form-control" name="institutionCode">
-								<option value="">--교육원선택--</option>
-								<option value="I1">전주평생교육원</option>
-								<option value="I2">서울평생교육원</option>
-								<option value="I3">성남평생교육원</option>
-								<option value="I4">인천평생교육원</option>
-								<option value="I5">광주평생교육원</option>
-								<option value="I6">구미평생교육원</option>
-							</select>
-						</div>
-					</div>
-					<p style="height: 10px"></p>
-					<div class="form-group">
-					<button type="button" class="btn btn-primary">#강사등록</button> <button type="button" class="btn btn-secondary disabled" onclick="location.href='javascript:history.back()'">뒤로가기</button>
-					</div>
-				</fieldset>
-			</form>
+							<div class="form-group">
+								<label for="InputInstitution">교육원</label>
+								<select class="form-control" id="institutionCode" name="institutionCode">
+									<option value="">--교육원선택--</option>
+									<option th:each="institution:${instList}" th:value="${institution.institutionCode}" th:text="${institution.institutionName}"></option>
+								</select>
+								<small class="form-text" id="instCode"></small>
+							</div>
+							<p style="height: 10px"></p>
+							<div class="form-group">
+								<button type="button" class="btn btn-primary">#강사등록</button> <button type="button" class="btn btn-secondary disabled" onclick="location.href='javascript:history.back()'">뒤로가기</button>
+							</div>
+						</fieldset>
+					</form>
+				</div>
+				<div class="col-md-5"></div>
+			</div>
 		</div>
+		<div class="col-sm-2"></div>
 	</div>
-	<div class="col-sm-2"></div>
 </div>
 </body>
 </html>
