--- a/lms/src/main/resources/templates/teacher/teacherLogin.html
+++ b/lms/src/main/resources/templates/teacher/teacherLogin.html
@@ -39,7 +39,7 @@
 				<div class="col-sm-6"></div>
 			</div>
 			<button type="submit" class="btn btn-info">로그인</button>
-			<a href="/insertAssociationAdmin" class="btn btn-outline-info">강사등록</a>
+			<a href="/insertTeacher" class="btn btn-outline-info">강사등록</a>
 	</form>
 	<br>
 	<br>
